# basic-rust-services

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.debug.yml  docker-compose.yml
src/: graphql_server.rs  grpc_client.rs  grpc_server.rs  http_server.rs
