[package]
name = "rusty-test"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "http-server"
path = "src/http_server.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.5.2"
prost = "0.8.0"

[build-dependencies]
tonic-build = "0.5.2"
