[package]
name = "rusty-test"
version = "0.1.0"
edition = "2018"

[[bin]] # Bin to run the HelloWorld HTTP server
name = "http-helloworld-server"
path = "src/http_server.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "grpc-helloworld-server"
path = "src/grpc_server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "grpc-helloworld-client"
path = "src/grpc_client.rs"

[[bin]] # Bin to run the HelloWorld GraphQL server
name = "graphql-helloworld-server"
path = "src/graphql_server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.5.2"
prost = "0.8.0"
juniper = "0.15"
juniper_hyper = "0.8.0"
log = "0.4"
pretty_env_logger = "0.3"

[build-dependencies]
tonic-build = "0.5.2"
